# ulmake

./: Cargo.toml  LICENSE  README.md
.github/workflows/: format.yaml  lint.yaml  test.yaml
resources/: testimage.iso  ul.cfg
src/: main.rs  option.rs
src/commands/: add.rs  delete.rs  list.rs
src/game/: crc.rs  iso.rs  mod.rs  serial.rs
src/ul/: mod.rs  parser.rs  status.rs  table.rs
src/utils/: mod.rs  parsers.rs  serial.rs
